# rust-advent-of-code

./: Cargo.toml
input/: day7-test1
