[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[features]
default = ["day18-animation", "day18-braille"]

day18-animation = ["winapi", "kernel32-sys"]
day18-braille = []

[dependencies]
arrayvec = "0.3.12"
clap = "1.5.3"
conv = "0.3.1"
crossbeam = "0.1.6"
itertools = "0.4.4"
lazy_static = "0.1.15"
permutohedron = "0.2.0"
regex = "0.1.43"
rust-crypto = "0.2.34"
serde_json = "0.6.0"
strcursor = "0.1.0"
time = "0.1.34"

winapi = { version = "0.2.5", optional = true }
kernel32-sys = { version = "0.2.1", optional = true }
